<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/viewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewName"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:ems="6"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/viewNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewNumber"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:hint="@string/Number"
                    android:inputType="phone"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/viewSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewSize"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewTable"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/RadioGroupArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonSmoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Indoor" />

                <RadioButton
                    android:id="@+id/radioButtonNSmoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Outdoor" />
            </RadioGroup>

            <TextView
                android:id="@+id/viewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewDate"
                android:textColor="#000000"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/viewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewTime"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Submit" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reset" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
